@@ -1,4 +1,5 @@
 2006-06-14  Don Allingham  <don@gramps-project.org>
+	* src/ScratchPad.py: check for null model
 	* src/GrampsDb/_ReadGedcom.py: fix INT date format
 
 2006-06-14  Alex Roitman  <shura@gramps-project.org>
